--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react-datetime": "2.16.3",
     "react-dom": "^16.13.1",
     "react-google-maps": "9.4.5",
+    "react-redux": "^7.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "8.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
