--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "chart.js": "2.9.3",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
@@ -16,6 +17,7 @@
     "moment": "^2.27.0",
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
+    "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-chartjs-2": "2.9.0",
     "react-copy-to-clipboard": "5.0.2",
@@ -24,7 +26,7 @@
     "react-google-maps": "9.4.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "reactstrap": "8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
